# ace_music

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  pyproject.toml
.claude/agents/: code-writer.md  doc-writer.md  quality-checker.md  researcher.md
.claude/skills/: batch-generate.md  deploy.md  generate-track.md  setup-cloud.md  test-quality.md
configs/: cloud-runpod.env  cloud-vastai.env  local-dev.env
docs/: GPU_SETUP.md  RESEARCH.md  SETUP.md
scripts/: download-models.sh  health-check.sh  setup-gpu-server.sh  start-api.sh  start-ui.sh  start-web.sh  test-connection.py  test-generate.py
src/: __init__.py  ace_client.py  config.py
src/templates/: base.html  generate.html  library.html
src/templates/partials/: error.html  progress.html  result.html  track_row.html
src/templates/static/: styles.css
src/web/: __init__.py  app.py  database.py  generation.py  routes.py
